--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-40aa6569 elementor-widget elementor-widget-text-editor" data-id="40aa6569" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Robô Investidor© &#8211; Todos os direitos Reservados</p>						</div>
+							<p>Protocolo Zero Barriga© &#8211; Todos os direitos Reservados</p>						</div>
 				</div>
 					</div>
 		</div>
