--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								<div class="elementor-element elementor-element-5099c3d9 elementor-widget elementor-widget-html" data-id="5099c3d9" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			<script type="text/javascript">
-                        var back_redirect_back_link = 'https://roboinvestdor.fun/redirect';
+                        var back_redirect_back_link = 'https://protocoloativabarriga.com/redirect';
 
    history.pushState({},"",location.href);
           history.pushState({},"",location.href);
