--- a/presl 2.html
+++ b/presl 2.html
@@ -13,7 +13,7 @@
 <h1>Tudo certo</h1>
 <p>Clique no botão abaixo para ser redirecionado para página solicitada!</p>
 <div class="btn">
-<a href="index.html" id="redirect">Continuar</a>
+<a href="index.html.html" id="redirect">Continuar</a>
 </div>
 </div>
 <script>
