--- a/presl 3.html
+++ b/presl 3.html
@@ -13,7 +13,7 @@
 <h1>Tudo certo</h1>
 <p>4 coisas que voce nao sabia?</p>
 <div class="btn">
- <a href="index.html" id="redirect">SIM,VOU OLHAR?</h1>
+ <a href="index.html.html" id="redirect">SIM,VOU OLHAR?</h1>
 </div>
 </div>
 <script>
