--- a/index.html.html
+++ b/index.html.html
@@ -920,7 +920,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-40aa6569 elementor-widget elementor-widget-text-editor" data-id="40aa6569" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>Robô Investidor© &#8211; Todos os direitos Reservados</p>						</div>
+							<p>Protocolo Ativa Barriga© &#8211; Todos os direitos Reservados</p>						</div>
 				</div>
 					</div>
 		</div>
@@ -933,7 +933,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								<div class="elementor-element elementor-element-5099c3d9 elementor-widget elementor-widget-html" data-id="5099c3d9" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			<script type="text/javascript">
-                        var back_redirect_back_link = 'https://roboinvestdor.fun/redirect';
+                        var back_redirect_back_link = 'https://protocoloativabarriga.com/index.html.html/redirect';
 
    history.pushState({},"",location.href);
           history.pushState({},"",location.href);
