--- a/index.html
+++ b/index.html
@@ -943,6 +943,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-element elementor-element-40aa6569 elementor-widget elementor-widget-text-editor" data-id="40aa6569" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 							<p>Protocolo ativa barriga© &#8211; Todos os direitos Reservados</p>						</div>
+				<div class="text-white"><a href="Termos de Uso _ Protocolo Zero Barriga.html" class="text-white">Termos de Uso</a> | <a href="Política de Privacidade _ Protocolo Zero Barriga.html" class="text-white">Política de Privacidade</a></div>
 				</div>
 					</div>
 		</div>
@@ -955,7 +956,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								<div class="elementor-element elementor-element-5099c3d9 elementor-widget elementor-widget-html" data-id="5099c3d9" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			<script type="text/javascript">
-                        var back_redirect_back_link = 'https://roboinvestdor.fun/redirect';
+                        var back_redirect_back_link = 'https://protocoloativabarriga.com/redirect';
 
    history.pushState({},"",location.href);
           history.pushState({},"",location.href);
