--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-69cae342 elementor-widget elementor-widget-text-editor" data-id="69cae342" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>&#8220;6 Simples Vitamina Ingredientes Derrete Muita Gordura&#8221;</p>						</div>
+							<p>&#8220;6 Simples Vitamina Ingredientes Derrete Muita Gordura&#8221;</p>						
 				</div>
-				<div class="elementor-element elementor-element-2273c527 elementor-widget elementor-widget-html" data-id="2273c527" data-element_type="widget" data-widget_type="html.default">
-				<div class="elementor-widget-container">
-			<script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js?nowprocket&version=1667926491621'; s.async=true; document.head.appendChild(s);} window.pandascripttag=window.pandascripttag || []; window.pandascripttag.push(function (){const p=new PandaPlayer('b4d7e20f-4ac1-4149-9e03-2a1bdb400ab3',{onReady() {p.loadButtonInTime({fetchApi: true})}, library_id: 'vz-00ffe310-34a', video_id: 'b4d7e20f-4ac1-4149-9e03-2a1bdb400ab3', defaultStyle: true});});</script><div id="b4d7e20f-4ac1-4149-9e03-2a1bdb400ab3"></div>		</div>
+				<script src="https://fast.wistia.com/embed/medias/ajlitmh3ge.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:55.94% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_ajlitmh3ge videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/ajlitmh3ge/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+
 				</div>
 				<div class="elementor-element elementor-element-5bf75581 elementor-align-center elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="5bf75581" data-element_type="widget" data-widget_type="icon-list.default">
 				<div class="elementor-widget-container">
@@ -211,7 +210,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 									</li>
 								<li class="elementor-icon-list-item elementor-inline-item">
 										<span class="elementor-icon-list-text">4 min</span>
-										<img src="Capturar16.PNG" />
+										<img src="1dd-removebg-preview.png" />
 									</li>
 						</ul>
 				
