--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 				<div class="elementor-element elementor-element-69cae342 elementor-widget elementor-widget-text-editor" data-id="69cae342" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>&#8220;6 Simples Vitamina Ingredientes Derrete Muita Gordura&#8221;</p>						
-				</div>
-				<script src="https://fast.wistia.com/embed/medias/ajlitmh3ge.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:55.94% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_ajlitmh3ge videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/ajlitmh3ge/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
-
+							<p>&#8220;6 Simples Vitamina Ingredientes Derrete Muita Gordura&#8221;</p>	
+												
+				<div id="vid_63c9eab2da5f7600088b8580" style="position:relative;width:100%;padding: 56.20608899297424% 0 0;"><img id="thumb_63c9eab2da5f7600088b8580" src="https://images.converteai.net/49ee2db1-2bc1-4aa0-99ba-baf1535ad150/players/63c9eab2da5f7600088b8580/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63c9eab2da5f7600088b8580" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63c9eab2da5f7600088b8580">var s=document.createElement("script");s.src="https://scripts.converteai.net/49ee2db1-2bc1-4aa0-99ba-baf1535ad150/players/63c9eab2da5f7600088b8580/player.js",s.async=!0,document.head.appendChild(s);</script>
 				</div>
 				<div class="elementor-element elementor-element-5bf75581 elementor-align-center elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="5bf75581" data-element_type="widget" data-widget_type="icon-list.default">
 				<div class="elementor-widget-container">
