--- a/index.html.html
+++ b/index.html.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><script data-no-optimize="1">var litespeed_docref=sessionStorage.getItem("litespeed_docref");litespeed_docref&&(Object.defineProperty(document,"referrer",{get:function(){return litespeed_docref}}),sessionStorage.removeItem("litespeed_docref"));</script>
+<head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5L3W7QR');</script>
+<!-- End Google Tag Manager -->
+
+	<script data-no-optimize="1">var litespeed_docref=sessionStorage.getItem("litespeed_docref");litespeed_docref&&(Object.defineProperty(document,"referrer",{get:function(){return litespeed_docref}}),sessionStorage.removeItem("litespeed_docref"));</script>
 	<meta charset="UTF-8">
 		<title>Protocolo Ativa Barriga</title>
 <meta name='robots' content='max-image-preview:large' />
@@ -1020,7 +1029,10 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
                                          <center>
                                          	<div class="text-red"><a href="Termos de Uso _ Protocolo Zero Barriga.html" class="text-red">Termos de Uso</a> | <a href="Política de Privacidade _ Protocolo Zero Barriga.html" class="text-red">Política de Privacidade</a></div>
                                          </center>
-                                         
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5L3W7QR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->                                     
 	</body>
 </html>
 
