--- a/index.html.html
+++ b/index.html.html
@@ -219,7 +219,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 									</li>
 								<li class="elementor-icon-list-item elementor-inline-item">
 										<span class="elementor-icon-list-text">4 min</span>
-										<img src="1dd-removebg-preview.png" />
+										<img src="Capturar8.PNG" />
 									</li>
 						</ul>
 				
